syntax = "proto3";

package subscriber;

option go_package = ".";

service ExternalSubscriber {
    rpc ProcessBlock (Block) returns (BlockAck);
}

message Block {
    bytes block_data = 1;
}

message BlockAck {
    bool success = 1;
}